Updates env vars

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-SHORT_COLUMN_NAME=short
-LONG_COLUMN_NAME=long
+SLUG_COLUMN_NAME=slug
+URL_COLUMN_NAME=url
 TABLE_NAME=urls
 SQLITE_FILE_NAME=sqlite.db
-SERVER_PORT=80
-BASE_URL=
+SERVER_PORT=8080
 API_KEY=
