--- a/package.json
+++ b/package.json
@@ -1,6 +1,35 @@
 {
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "sqlite3": "^5.1.6"
+  "name": "psl",
+  "version": "1.0.0",
+  "description": "A permashortlink generator",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/totallyquiche/psl.git"
+  },
+  "keywords": [
+    "shortlink",
+    "URL",
+    "shortener",
+    "link",
+    "shortener",
+    "permalink"
+  ],
+  "author": "Brian N. Dady <bndady@gmail.com>",
+  "license": "GPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/totallyquiche/psl/issues"
+  },
+  "homepage": "https://github.com/totallyquiche/psl#readme",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": true
   }
 }
