checks different urls result in different urls

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "jest": "^29.7.0"
   },
   "jest": {
-    "setupFiles": ["./jest.setup.js"]
+    "setupFiles": [
+      "./jest.setup.js"
+    ]
   },
   "prettier": {
     "trailingComma": "es5",
@@ -36,6 +38,7 @@
     "semi": true
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "sqids": "^0.3.0"
   }
 }
